wxc/include/ewxw/wxc_glue.h



/* wxSplitterWindow */
TClassDefExtend(wxSplitterWindow,wxWindow)
TClass(wxSplitterWindow) wxSplitterWindow_Create( TClass(wxWindow) _prt, int _id, TRect(_lft,_top,_wdt,_hgt), int _stl );

int        wxSplitterWindow_GetBorderSize( TSelf(wxSplitterWindow) _obj );

int        wxSplitterWindow_GetMinimumPaneSize( TSelf(wxSplitterWindow) _obj );

int        wxSplitterWindow_GetSashPosition( TSelf(wxSplitterWindow) _obj );

int        wxSplitterWindow_GetSashSize( TSelf(wxSplitterWindow) _obj );

int        wxSplitterWindow_GetSplitMode( TSelf(wxSplitterWindow) _obj );

TClass(wxWindow) wxSplitterWindow_GetWindow1( TSelf(wxSplitterWindow) _obj );

TClass(wxWindow) wxSplitterWindow_GetWindow2( TSelf(wxSplitterWindow) _obj );

void       wxSplitterWindow_Initialize( TSelf(wxSplitterWindow) _obj, TClass(wxWindow) window );

TBool      wxSplitterWindow_IsSplit( TSelf(wxSplitterWindow) _obj );

TBoolInt   wxSplitterWindow_ReplaceWindow( TSelf(wxSplitterWindow) _obj, TClass(wxWindow) winOld, TClass(wxWindow) winNew );

void       wxSplitterWindow_SetBorderSize( TSelf(wxSplitterWindow) _obj, int width );

void       wxSplitterWindow_SetMinimumPaneSize( TSelf(wxSplitterWindow) _obj, int min );

void       wxSplitterWindow_SetSashPosition( TSelf(wxSplitterWindow) _obj, int position, TBoolInt redraw );

void       wxSplitterWindow_SetSashSize( TSelf(wxSplitterWindow) _obj, int width );

void       wxSplitterWindow_SetSplitMode( TSelf(wxSplitterWindow) _obj, int mode );

TBool      wxSplitterWindow_SplitHorizontally( TSelf(wxSplitterWindow) _obj, TClass(wxWindow) window1, TClass(wxWindow) window2, int sashPosition );

TBool      wxSplitterWindow_SplitVertically( TSelf(wxSplitterWindow) _obj, TClass(wxWindow) window1, TClass(wxWindow) window2, int sashPosition );

TBool      wxSplitterWindow_Unsplit( TSelf(wxSplitterWindow) _obj, TClass(wxWindow) toRemove );